# typing-haskell-in-ocaml

./: .gitignore  README.md  dune-project  flake.nix  thio.opam
lib/: dune  infer.ml  lexer.mll  parser.mly  thio.ml
test/: dune  thio.ml  thio_tests.ml
