(lang dune 3.2)

(name thio)

(generate_opam_files true)

(source
 (github mendes13/thio))

(authors "Gustavo Medeiros")

(maintainers "Gustavo Medeiros")

(license LICENSE)

(package
 (name thio)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
